--- a/app/src/main/res/layout/frag_not_claimed.xml
+++ b/app/src/main/res/layout/frag_not_claimed.xml
@@ -9,8 +9,10 @@
 		android:layout_height="wrap_content"
 		android:layout_alignParentTop="true"
 		android:layout_alignParentRight="true"
+		android:layout_marginTop="20dp"
+		android:layout_marginRight="20dp"
 		android:textColor="@color/colorPrimary"
-		android:textSize="20dp"/>
+		android:textSize="24sp"/>
 
 	<LinearLayout
 		android:layout_width="match_parent"
@@ -19,9 +21,9 @@
 		android:orientation="vertical">
 
 		<ImageView
-			android:layout_marginTop="160dp"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
+			android:layout_marginTop="160dp"
 			android:background="@mipmap/not_claim"
 			android:scaleType="fitCenter"
 			/>
