--- a/app/src/main/res/layout/frag_settle.xml
+++ b/app/src/main/res/layout/frag_settle.xml
@@ -1,101 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
 	<TextView
+		android:id="@+id/tv_timer"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginLeft="20dp"
-		android:layout_marginTop="20dp"
-		android:text="结算信息:"
-		android:textSize="@dimen/tv_remark_size"/>
+		android:layout_alignParentTop="true"
+		android:layout_alignParentRight="true"
+		android:textColor="@color/colorPrimary"
+		android:textSize="22sp"/>
 
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:gravity="center_vertical"
-		android:orientation="vertical"
-		android:paddingLeft="50dp"
-		android:paddingRight="50dp">
+		android:orientation="vertical">
 
-		<RelativeLayout
-			android:layout_width="match_parent"
-			android:layout_height="50dp"
-			android:gravity="center_vertical">
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginLeft="20dp"
+			android:layout_marginTop="20dp"
+			android:text="结算信息:"
+			android:textSize="@dimen/tv_remark_size"/>
 
-			<TextView
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_alignParentLeft="true"
-				android:text="@string/name"
-				android:textColor="@color/colorBlack"
-				android:textSize="@dimen/txt_normal_size"/>
-
-			<TextView
-				android:id="@+id/tv_name"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_alignParentRight="true"
-				android:textColor="@color/black"
-				android:textSize="@dimen/txt_normal_size"/>
-		</RelativeLayout>
-
-		<View
-			android:layout_width="match_parent"
-			android:layout_height="1dp"
-			android:background="@color/line_color"/>
-
-
-		<RelativeLayout
-			android:layout_width="match_parent"
-			android:layout_height="50dp"
-			android:gravity="center_vertical">
-
-			<TextView
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_alignParentLeft="true"
-				android:text="@string/order_total"
-				android:textColor="@color/colorBlack"
-				android:textSize="@dimen/txt_normal_size"/>
-
-			<TextView
-				android:id="@+id/tv_total_money"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_alignParentRight="true"
-				android:textColor="@color/colorRed"
-				android:textSize="@dimen/txt_normal_size"/>
-		</RelativeLayout>
-
-		<View
-			android:layout_width="match_parent"
-			android:layout_height="1dp"
-			android:background="@color/line_color"/>
+		<TextView
+			android:id="@+id/tv_money"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center"
+			android:layout_marginTop="100dp"
+			android:layout_marginBottom="120dp"
+			android:textSize="84sp"/>
 
 		<LinearLayout
 			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_marginTop="120dp"
-			android:gravity="center"
-			android:orientation="horizontal">
+			android:layout_height="match_parent"
+			android:orientation="vertical"
+			android:paddingLeft="50dp"
+			android:paddingRight="50dp">
 
-			<ImageView
-				android:layout_width="140dp"
-				android:layout_height="140dp"
-				android:scaleType="fitCenter"
-				android:src="@mipmap/code"/>
 
-			<TextView
-				android:layout_width="250dp"
+			<RelativeLayout
+				android:layout_width="match_parent"
+				android:layout_height="50dp">
+
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_alignParentLeft="true"
+					android:text="@string/name"
+					android:textColor="@color/colorBlack"
+					android:textSize="@dimen/txt_normal_size"/>
+
+				<TextView
+					android:id="@+id/tv_name"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_alignParentRight="true"
+					android:textColor="@color/black"
+					android:textSize="@dimen/txt_normal_size"/>
+			</RelativeLayout>
+
+			<View
+				android:layout_width="match_parent"
+				android:layout_height="1dp"
+				android:background="@color/line_color"/>
+
+
+			<RelativeLayout
+				android:layout_width="match_parent"
+				android:layout_height="50dp"
+				android:gravity="center_vertical">
+
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_alignParentLeft="true"
+					android:text="@string/order_total"
+					android:textColor="@color/colorBlack"
+					android:textSize="@dimen/txt_normal_size"/>
+
+				<TextView
+					android:id="@+id/tv_total_money"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_alignParentRight="true"
+					android:textColor="@color/colorRed"
+					android:textSize="@dimen/txt_normal_size"/>
+			</RelativeLayout>
+
+			<View
+				android:layout_width="match_parent"
+				android:layout_height="1dp"
+				android:background="@color/line_color"/>
+
+			<LinearLayout
+				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:layout_marginLeft="40dp"
+				android:layout_marginTop="150dp"
 				android:gravity="center"
-				android:text="打开支付宝/微信扫描,进行在线支付"
-				android:textSize="20sp"/>
+				android:orientation="horizontal">
+
+				<ImageView
+					android:id="@+id/iv_code"
+					android:layout_width="140dp"
+					android:layout_height="140dp"
+					android:scaleType="fitCenter"
+					/>
+
+				<TextView
+					android:layout_width="250dp"
+					android:layout_height="wrap_content"
+					android:layout_marginLeft="40dp"
+					android:gravity="center"
+					android:text="打开支付宝/微信扫描,进行在线支付"
+					android:textSize="20sp"/>
+			</LinearLayout>
 		</LinearLayout>
 	</LinearLayout>
-</LinearLayout>
+</RelativeLayout>
 
