--- a/app/src/main/res/layout/frag_settle.xml
+++ b/app/src/main/res/layout/frag_settle.xml
@@ -108,7 +108,7 @@
 					android:layout_width="140dp"
 					android:layout_height="140dp"
 					android:scaleType="fitCenter"
-					/>
+					android:src="@mipmap/pay_code"/>
 
 				<TextView
 					android:layout_width="250dp"
